@@ -1,6 +1,3 @@
-
-
-
 # How to build
 
 ```bash
@@ -12,11 +9,11 @@
 Ensure that you dataset application is up and running
 
 ```bash
-java -jar build/libs/transform-app-0.0.1-SNAPSHOT.jar
+java -XX:+UnlockExperimentalVMOptions -XX:+UseZGC -jar build/libs/transform-app-0.0.1-SNAPSHOT.jar
 ```
 
 # How to invoke
 
 ```bash
-wget http://localhost:8080/transform/28000
+wget http://localhost:8080/transform/SNAPPY/28000
 ```
